# leads

./: .env.example  OPERATIONS.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yaml
apps/api/: logging_config.py  main.py  settings.py
apps/api/routers/: __init__.py  intake.py  knowledge.py  leads.py  metrics.py
apps/api/schemas/: base.py
apps/api/services/: store.py
apps/ui/: app.py
core/guardrails/: schemas.py
core/orchestration/: scoring.py  workflow.py
core/rag/: hierarchical.py
core/routing/: llm_router.py  rules.py
data/: golden_set_router.json
infra/docker/: Dockerfile  compose.dev.yaml
playbooks/: consultoria.yaml  inmobiliaria.yaml
sdk/unify_leads/: __init__.py  cli.py  client.py
tests/: test_composer_schema.py  test_rag_groundedness.py  test_rate_limits.py  test_router_json.py
